adds blocks to page and removed due date functions

--- a/index.html
+++ b/index.html
@@ -5,25 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do App</title>
+    <link rel="stylesheet" href="css/main.css">
+    
 </head>
 <body>
     <h1> To Do List</h1>
 
-    <label for ="title">Title</label>
+    <label for ="title">To Do Item</label>
     <input type="text" id="title">
     <span>*</span>
     <br>
 
-    <label for = "due date">Due Date</label>
-    <input type="text" id="due-date">
-    <span>*</span>
-    <br>
+
     
-<input type = "checkbox">
+<input id="is-complete" type = "checkbox">
 <label for = "is-complete"> Is Complete</label>
 <br>
 
-<input type = "button" value ="Add ToDo Item">
+<input type = "button" id="add" value ="Add ToDo Item">
+<h3>To Do Items</h3>
+<div id="incomplete-items"></div>
+<div id="complete-items"></div>
+
+<script src = "js/main.js"></script>
 
 </body>
 </html>
