Made buttons fake

--- a/index.html
+++ b/index.html
@@ -22,12 +22,26 @@
 <label for = "is-complete"> Is Complete</label>
 <br>
 
-<input type = "button" id="add" value ="Add ToDo Item">
+<input type = "button" class="cybr-btn" id="add" value ="Add ToDo Item">
 <h3>To Do Items</h3>
 <div id="incomplete-items"></div>
 <div id="complete-items"></div>
+
+
+<button class="cybr-btn">
+    Fake Button<span aria-hidden>_</span>
+    <span aria-hidden class="cybr-btn__glitch">Fake Button</span>
+    <span aria-hidden class="cybr-btn__tag">001</span>
+  </button>
+  <button class="cybr-btn">
+    Other Fake Button<span aria-hidden>_</span>
+    <span aria-hidden class="cybr-btn__glitch">Other Fake Button</span>
+    <span aria-hidden class="cybr-btn__tag">002</span>
+  </button>
 
 <script src = "js/main.js"></script>
 
 </body>
 </html>
+
+
